--- a/include/surenteteistex.html
+++ b/include/surenteteistex.html
@@ -26,7 +26,7 @@
           <a href="http://blog.istex.fr" ><img src="imagesI/LogoBlog.png" alt="" >blog</a>
         </li>
         <li>
-          <a href="http://XX" ><img src="imagesI/LogoVerrou.jpg"  alt="s'identifier" ></a>
+          <a href="#" ><img src="imagesI/LogoVerrou.jpg"  alt="s'identifier" ></a>
 
           <ul class="srentss">
             <li><a href="http://wiki.istex.fr" ><img src="imagesI/LogoWiki.png" alt="" >wiki</a></li>
@@ -34,7 +34,7 @@
           </ul>
         </li>
         <li>
-          <a href="http://XX" ><img src="imagesI/LogoTwitter.png" alt="twitter" ></a>
+          <a href="#" ><img src="imagesI/LogoTwitter.png" alt="twitter" ></a>
           <ul class="srentss">
             <li> <a href="https://twitter.com/istexdev" >istexdev</a></li>
             <li> <a href="https://twitter.com/Projet_ISTEX" >projet istex</a></li>
