Ajout cas particulier pour le wiki

--- a/less/main.less
+++ b/less/main.less
@@ -16,16 +16,23 @@
     .srent{
       margin-top: 9px;
       padding:0;
+
+      &.border{
+        margin-top: 8px;
+        border:1px solid #eaeade;
+        border-bottom: 0;
+      }
+
       img{
         vertical-align: middle;
       }
     }
     a.disabled{
-      background-color: #fff;
       color: #777;
       text-decoration: none;
       cursor: not-allowed;
     }
+
   }
 }
 
