Ajout. d'un postscript à npm install pour la compilation du 'less', Ajout. des nouveaux icones

--- a/include/surenteteistex.html
+++ b/include/surenteteistex.html
@@ -17,16 +17,16 @@
           <a href="http://api.istex.fr/documentation/" ><img src="imagesI/LogoApi.png" alt="" >API</a>
         </li>
         <li>
-          <a href="http://demo.istex.fr" ><img src="imagesI/LogoDemo.jpg" alt="" >demo</a>
+          <a href="http://demo.istex.fr" ><img src="imagesI/LogoDemo.png" alt="" >demo</a>
         </li>
         <li>
-          <a href="http://widgets.istex.fr" ><img src="imagesI/LogoWidget.jpg" alt="" >widget</a>
+          <a href="http://widgets.istex.fr" ><img src="imagesI/LogoWidget.png" alt="" >widget</a>
         </li>
         <li>
           <a href="http://blog.istex.fr" ><img src="imagesI/LogoBlog.png" alt="" >blog</a>
         </li>
         <li>
-          <a href="#" ><img src="imagesI/LogoVerrou.jpg"  alt="s'identifier" ></a>
+          <a href="#" ><img src="imagesI/LogoVerrou.png"  alt="s'identifier" ></a>
 
           <ul class="srentss">
             <li><a href="http://wiki.istex.fr" ><img src="imagesI/LogoWiki.png" alt="" >wiki</a></li>
