Correct. du less

--- a/less/main.less
+++ b/less/main.less
@@ -6,6 +6,9 @@
     border-bottom:1px solid #eaeade;
 
     .srentss{
+      background-color: #fff;
+    }
+    .srentss{
       border: 1px solid #eaeade;
       & > li{border:0;}
       & > li +li  { border-top: 1px solid #eaeade; }
