ajout lien vers les listes

--- a/include/surenteteistex.html
+++ b/include/surenteteistex.html
@@ -22,9 +22,12 @@
         <li>
           <a href="http://widgets.istex.fr" ><img src="imagesI/LogoWidget.png" alt="" >widget</a>
         </li>
-        <li>
-          <a href="http://blog.istex.fr" ><img src="imagesI/LogoBlog.png" alt="" >blog</a>
-        </li>
+          <li>
+              <a href="http://blog.istex.fr" ><img src="imagesI/LogoBlog.png" alt="" >blog</a>
+          </li>
+          <li>
+              <a href="https://listes.istex.fr/sympa/lists" ><img src="imagesI/LogoEnveloppe.png" alt="" >listes</a>
+          </li>
         <li>
           <a href="#" ><img src="imagesI/LogoVerrou.png"  alt="s'identifier" ></a>
 
