lien API => menu déroulant doc+tuto

--- a/include/surenteteistex.html
+++ b/include/surenteteistex.html
@@ -14,7 +14,11 @@
       <!--<img  class="logoanr" src="imagesI/LogoANR.png" alt="investissement d'avenir"> -->
       <ul class="srent">
         <li>
-          <a href="http://api.istex.fr/documentation/" ><img src="imagesI/LogoApi.png" alt="" >API</a>
+            <a href="#" ><img src="imagesI/LogoApi.png" alt="" >API</a>
+            <ul class="srentss">
+                <li><a href="https://api.istex.fr/documentation/" ><img src="imagesI/LogoDoc.png" alt="" >Documentation</a></li>
+                <li><a href="http://www.inist.fr/?Tutoriels-Interrogation-de-l-API" ><img src="imagesI/LogoTuto.png" alt="" >Tutoriels</a></li>
+            </ul>
         </li>
         <li>
           <a href="http://demo.istex.fr" ><img src="imagesI/LogoDemo.png" alt="" >demo</a>
