bugfix background-color et border-bottom

--- a/less/main.less
+++ b/less/main.less
@@ -2,8 +2,10 @@
 @import "surenteteistex.less";
 
 #istex-web-header{
+  background-color: white;
+  border-bottom:1px solid #eaeade;
+
   #surentete{
-    border-bottom:1px solid #eaeade;
 
     .srentss{
       background-color: #fff;
