passage d'une largeur fixe à automatique + padding

--- a/less/surenteteistex.less
+++ b/less/surenteteistex.less
@@ -1,5 +1,5 @@
 #istex-web-header{
-  #surentete{ margin:0 auto; padding:0; font-family:Arial, Helvetica, sans-serif; color:#333; 	height:40px; width:990px;position:relative;z-index:1000}
+  #surentete{ margin:0 auto; padding:0; font-family:Arial, Helvetica, sans-serif; color:#333; 	height:40px; position:relative;z-index:1000; padding-left:150px;padding-right:150px;background-color:white}
   #barresrent{ border-bottom:1px solid #eaeade;}
   .bsbb,.srent li{box-sizing:border-box;}
   .clear{clear:both}
