MAJ bandeau: ajout link sur status.istex.fr

--- a/include/surenteteistex.html
+++ b/include/surenteteistex.html
@@ -26,6 +26,9 @@
         <li>
           <a href="http://widgets.istex.fr" ><img src="imagesI/LogoWidget.png" alt="" >widget</a>
         </li>
+        <li>
+          <a href="https://status.istex.fr" ><img src="imagesI/LogoStatus.png" alt="" >status</a>
+        </li>
           <li>
               <a href="http://blog.istex.fr" ><img src="imagesI/LogoBlog.png" alt="" >blog</a>
           </li>
