Replace almost all img by font icons, add new link to istex web extension home, big clean up and refactoring, add jshint config, change gitingore config

--- a/less/main.less
+++ b/less/main.less
@@ -1,43 +1,47 @@
-@import "sandbox.less";
-@import "surenteteistex.less";
+.sandbox {
+  @import "reset.less";
+  @import "../node_modules/font-awesome/less/font-awesome.less";
+  @import "header.less";
 
-#istex-web-header{
-  background-color: white;
-  border-bottom:1px solid #eaeade;
-
-  #surentete{
-
-    .srentss{
-      background-color: #fff;
-    }
-    .srentss{
-      border: 1px solid #eaeade;
-      & > li{border:0;}
-      & > li +li  { border-top: 1px solid #eaeade; }
-    }
-    .srent{
-      margin-top: 9px;
-      padding:0;
-
-      &.border{
-        margin-top: 8px;
-        border:1px solid #eaeade;
-        border-bottom: 0;
-      }
-
-      img{
-        vertical-align: middle;
-      }
-    }
-    a.disabled{
-      color: #777;
-      text-decoration: none;
-      cursor: not-allowed;
-    }
-
+  .srent .fa {
+    margin-right: .33em;
+    color: #458ca6;
   }
 }
 
-#dokuwiki__site{
+#istex-web-header {
+  background-color: white;
+  border-bottom:    1px solid #eaeade;
+
+    .srentss {
+      background-color: #fff;
+    }
+    .srentss {
+      border: 1px solid #eaeade;
+      & > li { border: 0; }
+      & > li + li { border-top: 1px solid #eaeade; }
+    }
+    .srent {
+      margin-top: 9px;
+      padding:    0;
+
+      &.border {
+        margin-top:    8px;
+        border:        1px solid #eaeade;
+        border-bottom: 0;
+      }
+
+      img {
+        vertical-align: middle;
+      }
+    }
+    a.disabled {
+      color:           #777;
+      text-decoration: none;
+      cursor:          not-allowed;
+    }
+}
+
+#dokuwiki__site {
   position: relative;
 }
