Fix fontAwesome relative path

--- a/less/main.less
+++ b/less/main.less
@@ -3,6 +3,8 @@
   @import "../node_modules/font-awesome/less/font-awesome.less";
   @import "header.less";
 
+  @fa-font-path:        "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts";
+
   .srent .fa {
     margin-right: .33em;
     color: #458ca6;
