Ajout d'un watcher pour le compileur Less

--- a/less/header.less
+++ b/less/header.less
@@ -2,7 +2,7 @@
 
 #barresrent { border-bottom: 1px solid #eaeade; }
 
-.bsbb, .srent li { box-sizing: border-box; }
+//.bsbb, .srent li { box-sizing: border-box; }
 
 .clear { clear: both }
 
