--- a/less/main.less
+++ b/less/main.less
@@ -3,11 +3,11 @@
   @import "../node_modules/font-awesome/less/font-awesome.less";
   @import "header.less";
 
-  @fa-font-path:        "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts";
-
+  @font-path: "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts";
+  @fa-font-path: @font-path;
   .srent .fa {
     margin-right: .33em;
-    color: #458ca6;
+    color:        #458ca6;
   }
 }
 
@@ -15,33 +15,33 @@
   background-color: white;
   border-bottom:    1px solid #eaeade;
 
-    .srentss {
-      background-color: #fff;
-    }
-    .srentss {
-      border: 1px solid #eaeade;
-      & > li { border: 0; }
-      & > li + li { border-top: 1px solid #eaeade; }
-    }
-    .srent {
-      margin-top: 9px;
-      padding:    0;
+  .srentss {
+    background-color: #fff;
+  }
+  .srentss {
+    border: 1px solid #eaeade;
+    & > li { border: 0; }
+    & > li + li { border-top: 1px solid #eaeade; }
+  }
+  .srent {
+    margin-top: 9px;
+    padding:    0;
 
-      &.border {
-        margin-top:    8px;
-        border:        1px solid #eaeade;
-        border-bottom: 0;
-      }
+    &.border {
+      margin-top:    8px;
+      border:        1px solid #eaeade;
+      border-bottom: 0;
+    }
 
-      img {
-        vertical-align: middle;
-      }
+    img {
+      vertical-align: middle;
     }
-    a.disabled {
-      color:           #777;
-      text-decoration: none;
-      cursor:          not-allowed;
-    }
+  }
+  a.disabled {
+    color:           #777;
+    text-decoration: none;
+    cursor:          not-allowed;
+  }
 }
 
 #dokuwiki__site {
