--- a/public/views/header.view.html
+++ b/public/views/header.view.html
@@ -1,44 +1,55 @@
-<nav id="istex-web-header" class="bsbb">
+<nav id="istex__web-header">
   <a class="logoistex" href="http://www.istex.fr/">
     <img src="logo-istex-anr.png" title="Financement : ANR-10-IDEX-0004-02" alt="Istex">
   </a>
-  <ul class="srent">
-    <li>
+  <ul class="istex__navbar">
+    <li class="istex__dropdown">
       <a href="#"><i class='fa fa-rocket fa-fw fa-lg'></i>API</a>
-      <ul class="srentss">
-        <li><a href="https://api.istex.fr/documentation/"><i class='fa fa-book fa-fw fa-lg'></i>Documentation</a></li>
-        <li><a href="http://www.inist.fr/?Tutoriels-Interrogation-de-l-API"><i class='fa fa-graduation-cap fa-fw fa-lg'></i>Tutoriels</a>
+      <ul class="istex__dropdown-menu">
+        <li>
+          <a href="https://api.istex.fr/documentation/" title="Documentation technique et usage documentaire">
+            <i class='fa fa-book fa-fw fa-lg'></i>Documentation
+          </a>
+        </li>
+        <li>
+          <a href="http://www.inist.fr/?Tutoriels-Interrogation-de-l-API" title="Formez-vous rapidement à l'API">
+            <i class='fa fa-graduation-cap fa-fw fa-lg'></i>Tutoriels
+          </a>
         </li>
       </ul>
     </li>
     <li>
-      <a href="http://demo.istex.fr"> <i class='fa fa-film fa-fw fa-lg'></i>demo</a>
+      <a href="http://demo.istex.fr" title="Démonstrateur à vocation pédagogique"><i class='fa fa-film fa-fw fa-lg'></i>demo</a>
     </li>
     <li>
-      <a href="https://addons.istex.fr/"><i class='fa fa-puzzle-piece fa-fw fa-lg'></i>extension</a>
+      <a href="https://addons.istex.fr/" title="Accédez directement au plein-texte grâce à l'extension pour navigateur"><i class='fa fa-puzzle-piece fa-fw fa-lg'></i>extension</a>
     </li>
     <li>
-      <a href="http://widgets.istex.fr"><i class='fa fa-th fa-fw fa-lg'></i>widget</a>
+      <a href="http://widgets.istex.fr" title="Comment intégrer les widgets à un site Web tiers"><i class='fa fa-th fa-fw fa-lg'></i>widget</a>
     </li>
     <li>
-      <a href="https://status.istex.fr"><i class='fa fa-heartbeat fa-fw fa-lg'></i>status</a>
+      <a href="https://status.istex.fr" title="État de santé de la plateforme ISTEX"><i class='fa fa-heartbeat fa-fw fa-lg'></i>status</a>
     </li>
     <li>
-      <a href="http://blog.istex.fr"><i class='fa fa-comment fa-fw fa-lg'></i>blog</a>
+      <a href="http://blog.istex.fr" title="Blog technique"><i class='fa fa-comment fa-fw fa-lg'></i>blog</a>
     </li>
     <li>
-      <a href="https://listes.istex.fr/sympa/lists"><i class='fa fa-envelope fa-fw fa-lg'></i>listes</a>
+      <a href="https://listes.istex.fr/sympa/lists" title="Service de listes de L'ISTEX"><i class='fa fa-envelope fa-fw fa-lg'></i>listes</a>
     </li>
-    <li>
+    <li class="istex__dropdown">
       <a href="#"><i class='fa fa-lock fa-fw fa-lg'></i></a>
-      <ul class="srentss">
-        <li><a href="http://wiki.istex.fr"><img src="logo-wiki.png" alt="">wiki</a></li>
-        <li><a href="http://kanban.istex.fr"><img src="logo-kanban.png" alt="">kanban</a></li>
+      <ul class="istex__dropdown-menu">
+        <li>
+          <a href="http://wiki.istex.fr" ><img src="logo-wiki.png">wiki</a>
+        </li>
+        <li>
+          <a href="http://kanban.istex.fr"><img src="logo-kanban.png">kanban</a>
+        </li>
       </ul>
     </li>
-    <li>
+    <li class="istex__dropdown">
       <a href="#"><i class='fa fa-twitter fa-fw fa-lg'></i></a>
-      <ul class="srentss">
+      <ul class="istex__dropdown-menu">
         <li><a href="https://twitter.com/istexdev">istexdev</a></li>
         <li><a href="https://twitter.com/Projet_ISTEX">projet istex</a></li>
       </ul>
