Fix dropdown background color

--- a/less/header.less
+++ b/less/header.less
@@ -69,6 +69,7 @@ nav {
       display:         none;
       border:          1px solid @navbar-border-color;
       width: 140px;
+      background-color: #fff;
       list-style-type: none;
       & > li {
         padding: 0 10px;
