Add new title on links

--- a/public/views/header.view.html
+++ b/public/views/header.view.html
@@ -40,18 +40,18 @@
       <a href="#"><i class='fa fa-lock fa-fw fa-lg'></i></a>
       <ul class="istex__dropdown-menu">
         <li>
-          <a href="http://wiki.istex.fr" ><img src="logo-wiki.png">wiki</a>
+          <a href="http://wiki.istex.fr" title="Wiki technique réservé aux équipes de développement"><img src="logo-wiki.png">wiki</a>
         </li>
         <li>
-          <a href="http://kanban.istex.fr"><img src="logo-kanban.png">kanban</a>
+          <a href="http://kanban.istex.fr" title="Tableau de suivi des corpus, accès contrôlé"><img src="logo-kanban.png">kanban</a>
         </li>
       </ul>
     </li>
     <li class="istex__dropdown">
       <a href="#"><i class='fa fa-twitter fa-fw fa-lg'></i></a>
       <ul class="istex__dropdown-menu">
-        <li><a href="https://twitter.com/istexdev">istexdev</a></li>
-        <li><a href="https://twitter.com/Projet_ISTEX">projet istex</a></li>
+        <li><a href="https://twitter.com/istexdev" title="Compte Twitter de la plateforme">istexdev</a></li>
+        <li><a href="https://twitter.com/Projet_ISTEX" title="Compte Twitter institutionnel">projet istex</a></li>
       </ul>
     </li>
   </ul>
