--- a/public/views/header.view.html
+++ b/public/views/header.view.html
@@ -6,17 +6,22 @@
   <ul class="istex__navbar">
     <li class="istex__dropdown">
       <a href="#">
-          <i class='fa fa-rocket fa-fw fa-lg'></i><span class="text__dropdown">API</span>
+          <i class='fa fa-book fa-fw fa-lg'></i><span class="text__dropdown">Documentation</span>
       </a>
-      <ul class="istex__dropdown-menu">
+      <ul class="istex__dropdown-menu">fa fa-rocket fa-fw fa-lg
         <li>
           <a href="https://api.istex.fr/documentation/" title="Documentation technique et usage documentaire">
-            <i class='fa fa-book fa-fw fa-lg'></i>documentation
+            <i class='fa fa-rocket fa-fw fa-lg'></i>Documentation API
           </a>
         </li>
         <li>
           <a href="http://www.inist.fr/?Tutoriels-Interrogation-de-l-API" title="Formez-vous rapidement à l'API">
-            <i class='fa fa-graduation-cap fa-fw fa-lg'></i>tutoriels
+            <i class='fa fa-user fa-fw fa-lg'></i>Documentation Utilisateur
+          </a>
+        </li>
+        <li>
+          <a href="http://www.inist.fr/?Tutoriels-Interrogation-de-l-API" title="Formez-vous rapidement à l'API">
+            <i class='fa fa-graduation-cap fa-fw fa-lg'></i>Tutoriels
           </a>
         </li>
       </ul>
