--- a/public/views/header.view.html
+++ b/public/views/header.view.html
@@ -8,18 +8,18 @@
       <a href="#">
           <i class='fa fa-book fa-fw fa-lg'></i><span class="text__dropdown">Documentation</span>
       </a>
-      <ul class="istex__dropdown-menu">fa fa-rocket fa-fw fa-lg
-        <li>
-          <a href="https://api.istex.fr/documentation/" title="Documentation technique et usage documentaire">
+      <ul class="istex__dropdown-menu">
+        <li class="sub_menu">
+          <a href="https://api.istex.fr/documentation/" title="Documentation API">
             <i class='fa fa-rocket fa-fw fa-lg'></i>Documentation API
           </a>
         </li>
-        <li>
-          <a href="http://www.inist.fr/?Tutoriels-Interrogation-de-l-API" title="Formez-vous rapidement à l'API">
+        <li class="sub_menu">
+          <a href="http://www.inist.fr/?Tutoriels-Interrogation-de-l-API" title="Documentation utilisateur">
             <i class='fa fa-user fa-fw fa-lg'></i>Documentation Utilisateur
           </a>
         </li>
-        <li>
+        <li class="sub_menu">
           <a href="http://www.inist.fr/?Tutoriels-Interrogation-de-l-API" title="Formez-vous rapidement à l'API">
             <i class='fa fa-graduation-cap fa-fw fa-lg'></i>Tutoriels
           </a>
@@ -28,39 +28,39 @@
     </li>
     <li>
       <a href="http://demo.istex.fr" title="Démonstrateur à vocation pédagogique">
-          <i class='fa fa-film fa-fw fa-lg'></i><span class="text__dropdown">demo</span>
+          <i class='fa fa-film fa-fw fa-lg'></i><span class="text__dropdown">Demo</span>
       </a>
     </li>
     <li class="istex__dropdown">
       <a href="#">
-          <i class='fa fa-wrench fa-fw fa-lg'></i><span class="text__dropdown">outils</span>
+          <i class='fa fa-wrench fa-fw fa-lg'></i><span class="text__dropdown">Outils</span>
       </a>
       <ul class="istex__dropdown-menu">
         <li>
           <a href="https://addons.istex.fr/" title="Accédez directement au plein-texte grâce à l'extension pour navigateur">
-            <i class='fa fa-puzzle-piece fa-fw fa-lg'></i>extension
+            <i class='fa fa-puzzle-piece fa-fw fa-lg'></i>Extension
           </a>
         </li>
         <li>
           <a href="http://widgets.istex.fr" title="Comment intégrer les widgets à un site Web tiers">
-            <i class='fa fa-th fa-fw fa-lg'></i>widget
+            <i class='fa fa-th fa-fw fa-lg'></i>Widget
           </a>
         </li>
       </ul>
     </li>
     <li>
       <a href="http://blog.istex.fr" title="Blog technique">
-          <i class='fa fa-comment fa-fw fa-lg'></i><span class="text__dropdown">blog</span>
+          <i class='fa fa-comment fa-fw fa-lg'></i><span class="text__dropdown">Blog</span>
       </a>
     </li>
     <li class="istex__dropdown">
       <a href="#"><i class='fa fa-lock fa-fw fa-lg'></i></a>
       <ul class="istex__dropdown-menu">
         <li>
-          <a href="http://wiki.istex.fr" title="Wiki technique réservé aux équipes de développement"><img src="logo-wiki.png">wiki</a>
+          <a href="http://wiki.istex.fr" title="Wiki technique réservé aux équipes de développement"><img src="logo-wiki.png">Wiki</a>
         </li>
         <li>
-          <a href="http://kanban.istex.fr" title="Tableau de suivi des corpus, accès contrôlé"><img src="logo-kanban.png">kanban</a>
+          <a href="http://kanban.istex.fr" title="Tableau de suivi des corpus, accès contrôlé"><img src="logo-kanban.png">Kanban</a>
         </li>
       </ul>
     </li>
@@ -69,19 +69,19 @@
       <ul class="istex__dropdown-menu">
         <li>
             <a href="https://twitter.com/Projet_ISTEX" title="Compte Twitter institutionnel">
-                <i class='fa fa-twitter fa-fw fa-lg'></i>projet
+                <i class='fa fa-twitter fa-fw fa-lg'></i>Projet
             </a>
         </li>
         <li>
             <a href="https://twitter.com/istexdev" title="Compte Twitter de la plateforme">
-                <i class='fa fa-twitter fa-fw fa-lg'></i>développement
+                <i class='fa fa-twitter fa-fw fa-lg'></i>Développement
             </a>
         </li>
       </ul>
     </li>
     <li>
       <a href="https://listes.istex.fr/sympa/lists" title="Service de listes de L'ISTEX">
-          <i class='fa fa-envelope fa-fw fa-lg'></i><span class="text__dropdown">listes</span>
+          <i class='fa fa-envelope fa-fw fa-lg'></i><span class="text__dropdown">Listes</span>
       </a>
     </li>
     <li>
