--- a/public/views/header.view.html
+++ b/public/views/header.view.html
@@ -28,7 +28,7 @@
     </li>
     <li>
       <a href="http://demo.istex.fr" title="Démonstrateur à vocation pédagogique">
-          <i class='fa fa-film fa-fw fa-lg'></i><span class="text__dropdown">Demo</span>
+          <i class='fa fa-film fa-fw fa-lg'></i><span class="text__dropdown">Démo</span>
       </a>
     </li>
     <li class="istex__dropdown">
