--- a/less/header.less
+++ b/less/header.less
@@ -74,6 +74,7 @@ nav {
       list-style-type:  none;
       & > li {
           padding: 0 5px;
+          width: 130px;
       }
       & .sub_menu {
         padding: 0 5px;
