--- a/public/views/header.view.html
+++ b/public/views/header.view.html
@@ -86,7 +86,7 @@
     </li>
     <li>
       <a href="https://status.istex.fr" target="_blank" title="État de santé de la plateforme ISTEX">
-          <i class='fa fa-heartbeat fa-fw fa-lg'></i><span class="text__dropdown">status</span>
+          <i class='fa fa-heartbeat fa-fw fa-lg'></i><span class="text__dropdown">Status</span>
       </a>
     </li>
   </ul>
