retrait des attributs target blank

--- a/public/views/header.view.html
+++ b/public/views/header.view.html
@@ -5,29 +5,29 @@
     </a>
   <ul class="istex__navbar">
     <li class="istex__dropdown">
-      <a href="https://doc.istex.fr/" target="_blank">
+      <a href="https://doc.istex.fr/">
           <i class='fa fa-book fa-fw fa-lg'></i><span class="text__dropdown">Documentation</span>
       </a>
       <ul class="istex__dropdown-menu">
         <li class="sub_menu">
-          <a href="https://api.istex.fr/documentation/" target="_blank" title="Documentation API">
+          <a href="https://api.istex.fr/documentation/" title="Documentation API">
             <i class='fa fa-rocket fa-fw fa-lg'></i>Documentation API
           </a>
         </li>
         <li class="sub_menu">
-          <a href="https://doc.istex.fr/users/" target="_blank" title="Documentation utilisateur">
+          <a href="https://doc.istex.fr/users/" title="Documentation utilisateur">
             <i class='fa fa-user fa-fw fa-lg'></i>Documentation Utilisateur
           </a>
         </li>
         <li class="sub_menu">
-          <a href="http://www.inist.fr/?Tutoriels-Interrogation-de-l-API/" target="_blank" title="Formez-vous rapidement à l'API">
+          <a href="http://www.inist.fr/?Tutoriels-Interrogation-de-l-API/" title="Formez-vous rapidement à l'API">
             <i class='fa fa-graduation-cap fa-fw fa-lg'></i>Tutoriels
           </a>
         </li>
       </ul>
     </li>
     <li>
-      <a href="http://demo.istex.fr/" target="_blank" title="Démonstrateur à vocation pédagogique">
+      <a href="http://demo.istex.fr/" title="Démonstrateur à vocation pédagogique">
           <i class='fa fa-film fa-fw fa-lg'></i><span class="text__dropdown">Démo</span>
       </a>
     </li>
@@ -37,19 +37,19 @@
       </a>
       <ul class="istex__dropdown-menu">
         <li>
-          <a href="https://addons.istex.fr/" target="_blank" title="Accédez directement au plein-texte grâce à l'extension pour navigateur">
+          <a href="https://addons.istex.fr/" title="Accédez directement au plein-texte grâce à l'extension pour navigateur">
             <i class='fa fa-puzzle-piece fa-fw fa-lg'></i>Extension
           </a>
         </li>
         <li>
-          <a href="http://widgets.istex.fr/" target="_blank" title="Comment intégrer les widgets à un site Web tiers">
+          <a href="http://widgets.istex.fr/" title="Comment intégrer les widgets à un site Web tiers">
             <i class='fa fa-th fa-fw fa-lg'></i>Widget
           </a>
         </li>
       </ul>
     </li>
     <li>
-      <a href="http://blog.istex.fr/" target="_blank" title="Blog technique">
+      <a href="http://blog.istex.fr/" title="Blog technique">
           <i class='fa fa-comment fa-fw fa-lg'></i><span class="text__dropdown">Blog</span>
       </a>
     </li>
@@ -57,10 +57,10 @@
       <a href="#"><i class='fa fa-lock fa-fw fa-lg'></i></a>
       <ul class="istex__dropdown-menu">
         <li>
-          <a href="http://wiki.istex.fr/" target="_blank" title="Wiki technique réservé aux équipes de développement"><img src="logo-wiki.png">Wiki</a>
+          <a href="http://wiki.istex.fr/" title="Wiki technique réservé aux équipes de développement"><img src="logo-wiki.png">Wiki</a>
         </li>
         <li>
-          <a href="http://kanban.istex.fr/" target="_blank" title="Tableau de suivi des corpus, accès contrôlé"><img src="logo-kanban.png">Kanban</a>
+          <a href="http://kanban.istex.fr/" title="Tableau de suivi des corpus, accès contrôlé"><img src="logo-kanban.png">Kanban</a>
         </li>
       </ul>
     </li>
@@ -68,24 +68,24 @@
       <a href="#"><i class='fa fa-twitter fa-fw fa-lg'></i></a>
       <ul class="istex__dropdown-menu">
         <li>
-            <a href="https://twitter.com/Projet_ISTEX/" target="_blank" title="Compte Twitter institutionnel">
+            <a href="https://twitter.com/Projet_ISTEX/" title="Compte Twitter institutionnel">
                 <i class='fa fa-twitter fa-fw fa-lg'></i>Projet
             </a>
         </li>
         <li>
-            <a href="https://twitter.com/istexdev/" target="_blank" title="Compte Twitter de la plateforme">
+            <a href="https://twitter.com/istexdev/" title="Compte Twitter de la plateforme">
                 <i class='fa fa-twitter fa-fw fa-lg'></i>Développement
             </a>
         </li>
       </ul>
     </li>
     <li>
-      <a href="https://listes.istex.fr/sympa/lists/" target="_blank" title="Service de listes de L'ISTEX">
+      <a href="https://listes.istex.fr/sympa/lists/" title="Service de listes de L'ISTEX">
           <i class='fa fa-envelope fa-fw fa-lg'></i><span class="text__dropdown">Listes</span>
       </a>
     </li>
     <li>
-      <a href="https://status.istex.fr/" target="_blank" title="État de santé de la plateforme ISTEX">
+      <a href="https://status.istex.fr/" title="État de santé de la plateforme ISTEX">
           <i class='fa fa-heartbeat fa-fw fa-lg'></i><span class="text__dropdown">Status</span>
       </a>
     </li>
